--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fon1">
+    android:background="@drawable/fon2"
+    android:id="@+id/rootLayout">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -28,172 +29,42 @@
             android:layout_marginLeft="20dp"
 
             android:background="#ffff0a11"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:id="@+id/textViewCurLevel"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:clickable="false"
-        android:layout_marginTop="0dp"
-        android:gravity="center">
-
-        <ImageButton
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:id="@+id/imageView2"
-            android:background="#ffff0a11"
-
-            android:layout_marginBottom="5dp"
-
-            android:onClick="onAnimationImageThree"
-
-/>
-
-
-        <ImageButton
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-        android:id="@+id/imageView"
-        android:background="#ff0512ff"
-            android:adjustViewBounds="false"
-            android:baselineAlignBottom="false"
-            android:layout_below="@+id/imageView2"
-            android:layout_toRightOf="@+id/imageView2"
-            android:layout_toEndOf="@+id/imageView2"
-            android:layout_marginLeft="5dp"
-            />
-
-
-        <ImageButton
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:id="@+id/imageView3"
-            android:background="#ffff23ce"
-
-            android:clickable="false"
-            android:layout_below="@+id/imageView2"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-
-           />
-
-        <ImageButton
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:id="@+id/imageView4"
-            android:background="#ff10ff12"
-
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/imageView2"
-            android:layout_toEndOf="@+id/imageView2"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="5dp"/>
-
-
+    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="350dp">
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingTop="10dp" android:gravity="center">
+            <!--
+             This is an example layout containing thumbnail image buttons that, when pressed,
+                         zoom in to show more detail. All of the zooming and animation logic is in
+                         the ZoomActivity class.
+            -->
+            <AbsoluteLayout android:layout_width="330dp" android:layout_height="330dp" android:layout_centerHorizontal="true">
+                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff0512ff" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
+                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="170dp" android:background="#ff0512ff" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ffff23ce" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff10ff12" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageView android:id="@+id/expanded_image" android:layout_width="wrap_content" android:layout_height="330dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="3dp" android:background="#ff10ff12"/>
+            </AbsoluteLayout>
+        </LinearLayout>
     </RelativeLayout>
-<RelativeLayout
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:gravity="center"
-    >
+    android:id="@+id/guessWordsLayout"
+    android:orientation="vertical">
 
-    <ImageButton
-    android:layout_width="25dp"
-    android:layout_height="25dp"
-    android:id="@+id/imageButton16"
-    android:background="#ffffffff" />
 
-    <ImageButton
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:id="@+id/imageButton17"
-        android:background="#ffffffff"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageButton16"
-        android:layout_toEndOf="@+id/imageButton16"
-        android:layout_marginLeft="5dp"/>
 
-    <ImageButton
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:id="@+id/imageButton18"
-        android:background="#ffffffff"
-        android:layout_alignTop="@+id/imageButton17"
-        android:layout_toRightOf="@+id/imageButton17"
-        android:layout_toEndOf="@+id/imageButton17"
-        android:layout_marginLeft="5dp"/>
-
-    <ImageButton
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:id="@+id/imageButton19"
-        android:background="#ffffffff"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageButton18"
-        android:layout_toEndOf="@+id/imageButton18"
-        android:layout_marginLeft="5dp"/>
-
-    <ImageButton
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:id="@+id/imageButton20"
-        android:background="#ffffffff"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageButton19"
-        android:layout_toEndOf="@+id/imageButton19"
-        android:layout_marginLeft="5dp"/>
-
-    <ImageButton
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:id="@+id/imageButton21"
-        android:background="#ffffffff"
-        android:layout_alignTop="@+id/imageButton20"
-        android:layout_toRightOf="@+id/imageButton20"
-        android:layout_toEndOf="@+id/imageButton20"
-        android:layout_marginLeft="5dp"/>
-
-    <ImageButton
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:id="@+id/imageButton22"
-        android:background="#ffffffff"
-        android:layout_alignTop="@+id/imageButton21"
-        android:layout_toRightOf="@+id/imageButton21"
-        android:layout_toEndOf="@+id/imageButton21"
-        android:layout_marginLeft="5dp"/>
-
-    <ImageButton
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:id="@+id/imageButton23"
-        android:background="#ffffffff"
-        android:layout_alignTop="@+id/imageButton22"
-        android:layout_toRightOf="@+id/imageButton22"
-        android:layout_toEndOf="@+id/imageButton22"
-        android:layout_marginLeft="5dp"/>
-
-    <ImageButton
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:id="@+id/imageButton24"
-        android:background="#ffffffff"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageButton23"
-        android:layout_toEndOf="@+id/imageButton23"
-        android:layout_marginLeft="5dp"/>
-
-    <ImageButton
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:id="@+id/imageButton25"
-        android:background="#ffffffff"
-        android:layout_toRightOf="@+id/imageButton24"
-        android:layout_toEndOf="@+id/imageButton24"
-        android:layout_marginLeft="5dp"
-        />
-
-</RelativeLayout>
+</LinearLayout>
 
 
     <RelativeLayout
@@ -202,134 +73,148 @@
         android:gravity="center"
         >
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton4"
+            android:id="@+id/buttonLetter0"
             android:layout_marginLeft="5dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:background="#fffcda1a"/>
+            android:background="#fffcda1a"
+            android:onClick="onClick"/>
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton"
+            android:id="@+id/buttonLetter1"
             android:background="#fffcda1a"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/imageButton4"
-            android:layout_toEndOf="@+id/imageButton4" />
+            android:layout_toRightOf="@+id/buttonLetter0"
+            android:layout_toEndOf="@+id/buttonLetter0"
+            android:onClick="onClick" />
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton2"
+            android:id="@+id/buttonLetter2"
             android:background="#fffcda1a"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/imageButton"
-            android:layout_toEndOf="@+id/imageButton" />
+            android:layout_toRightOf="@+id/buttonLetter1"
+            android:layout_toEndOf="@+id/buttonLetter1"
+            android:onClick="onClick" />
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton5"
+            android:id="@+id/buttonLetter3"
             android:background="#fffcda1a"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/imageButton2"
-            android:layout_toEndOf="@+id/imageButton2" />
+            android:layout_toRightOf="@+id/buttonLetter2"
+            android:layout_toEndOf="@+id/buttonLetter2"
+            android:onClick="onClick" />
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton6"
+            android:id="@+id/buttonLetter4"
             android:background="#fffcda1a"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/imageButton5"
-            android:layout_toEndOf="@+id/imageButton5" />
+            android:layout_toRightOf="@+id/buttonLetter3"
+            android:layout_toEndOf="@+id/buttonLetter3"
+            android:onClick="onClick" />
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton7"
+            android:id="@+id/buttonLetter5"
             android:layout_marginLeft="5dp"
             android:background="#fffcda1a"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/imageButton6"
-            android:layout_toEndOf="@+id/imageButton6"
+            android:layout_toRightOf="@+id/buttonLetter4"
+            android:layout_toEndOf="@+id/buttonLetter4"
+            android:onClick="onClick"
              />
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/imageButton8"
             android:background="#fffc0628"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/imageButton7"
-            android:layout_toEndOf="@+id/imageButton7" />
+            android:layout_toRightOf="@+id/buttonLetter5"
+            android:layout_toEndOf="@+id/buttonLetter5"
+            android:onClick="onClick" />
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton9"
+            android:id="@+id/buttonLetter6"
             android:background="#fffcda1a"
 
-            android:layout_toLeftOf="@+id/imageButton"
-            android:layout_toStartOf="@+id/imageButton"
-            android:layout_marginTop="45dp"/>
+            android:layout_toLeftOf="@+id/buttonLetter1"
+            android:layout_toStartOf="@+id/buttonLetter1"
+            android:layout_marginTop="45dp"
+            android:onClick="onClick"/>
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton10"
+            android:id="@+id/buttonLetter7"
             android:background="#fffcda1a"
-            android:layout_alignTop="@+id/imageButton9"
-            android:layout_toLeftOf="@+id/imageButton2"
-            android:layout_toStartOf="@+id/imageButton2" />
+            android:layout_alignTop="@+id/buttonLetter6"
+            android:layout_toLeftOf="@+id/buttonLetter2"
+            android:layout_toStartOf="@+id/buttonLetter2"
+            android:onClick="onClick" />
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton11"
+            android:id="@+id/buttonLetter8"
             android:background="#fffcda1a"
-            android:layout_alignTop="@+id/imageButton10"
-            android:layout_toLeftOf="@+id/imageButton5"
-            android:layout_toStartOf="@+id/imageButton5" />
+            android:layout_alignTop="@+id/buttonLetter7"
+            android:layout_toLeftOf="@+id/buttonLetter3"
+            android:layout_toStartOf="@+id/buttonLetter3"
+            android:onClick="onClick" />
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton12"
+            android:id="@+id/buttonLetter9"
             android:background="#fffcda1a"
-            android:layout_alignTop="@+id/imageButton11"
-            android:layout_toLeftOf="@+id/imageButton6"
-            android:layout_toStartOf="@+id/imageButton6" />
+            android:layout_alignTop="@+id/buttonLetter8"
+            android:layout_toLeftOf="@+id/buttonLetter4"
+            android:layout_toStartOf="@+id/buttonLetter4"
+            android:onClick="onClick" />
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton13"
+            android:id="@+id/buttonLetter10"
             android:background="#fffcda1a"
-            android:layout_alignTop="@+id/imageButton12"
-            android:layout_alignLeft="@+id/imageButton6"
-            android:layout_alignStart="@+id/imageButton6" />
+            android:layout_alignTop="@+id/buttonLetter9"
+            android:layout_alignLeft="@+id/buttonLetter4"
+            android:layout_alignStart="@+id/buttonLetter4"
+            android:onClick="onClick" />
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton14"
+            android:id="@+id/buttonLetter11"
             android:background="#fffcda1a"
-            android:layout_alignTop="@+id/imageButton13"
+            android:layout_alignTop="@+id/buttonLetter10"
             android:layout_toLeftOf="@+id/imageButton8"
-            android:layout_toStartOf="@+id/imageButton8" />
+            android:layout_toStartOf="@+id/imageButton8"
+            android:onClick="onClick" />
 
-        <ImageButton
+        <Button
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:id="@+id/imageButton15"
+            android:id="@+id/buttonLetter12"
             android:background="#fffcda1a"
-            android:layout_alignTop="@+id/imageButton14"
+            android:layout_alignTop="@+id/buttonLetter11"
             android:layout_alignLeft="@+id/imageButton8"
-            android:layout_alignStart="@+id/imageButton8" />
+            android:layout_alignStart="@+id/imageButton8"
+            android:onClick="onClick" />
 
     </RelativeLayout>
 
