--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -4,36 +4,36 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="#ff446787">
+    android:background="@drawable/fon1"
+    android:gravity="center">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/imageButtonPlay"
-        android:src="@drawable/play"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="133dp" />
+        android:src="@drawable/playbtn"
+        android:background="@drawable/btnanim"
+        android:onClick="animButtonClick"/>
 
     <Button
-        android:layout_width="100dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:text="магазин"
         android:id="@+id/button"
-        android:layout_below="@+id/imageButton"
-        android:layout_alignLeft="@+id/imageButton"
-        android:layout_alignStart="@+id/imageButton"
-        android:layout_marginTop="20dp" />
+        android:layout_below="@+id/imageButtonPlay"
+        android:layout_alignLeft="@+id/imageButtonPlay"
+        android:layout_alignStart="@+id/imageButtonPlay"
+        android:layout_marginTop="20dp"
+        android:background="#549214"/>
 
     <Button
-        android:layout_width="100dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:text="о нас"
-        android:id="@+id/button2"
+        android:text="о нас" android:id="@+id/button2"
         android:layout_alignTop="@+id/button"
-        android:layout_alignRight="@+id/imageButton"
-        android:layout_alignEnd="@+id/imageButton"
-        />
+        android:layout_alignRight="@+id/imageButtonPlay"
+        android:layout_alignEnd="@+id/imageButtonPlay"
+        android:background="#114852"/>
 
 
 </RelativeLayout>
