--- a/app/src/main/res/layout-large/game.xml
+++ b/app/src/main/res/layout-large/game.xml
@@ -166,7 +166,9 @@
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter5"
             android:layout_toEndOf="@+id/buttonLetter5"
-            android:onClick="onClickActualLetter" />
+            android:onClick="ShowHintsPopUp"
+            android:textSize="@dimen/actual_letter_text_size"
+            android:text="\?" />
 
         <Button
             android:layout_width="60dp"
