--- a/app/src/main/res/layout-xlarge/game.xml
+++ b/app/src/main/res/layout-xlarge/game.xml
@@ -166,7 +166,8 @@
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/buttonLetter5"
             android:layout_toEndOf="@+id/buttonLetter5"
-            android:onClick="onClick" />
+            android:textSize="@dimen/actual_letter_text_size"
+            android:onClick="ShowHintsPopUp" />
 
         <Button
             android:layout_width="90dp"
