--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:background="@drawable/fon1"
-    android:gravity="center">
+    android:gravity="center"
+    android:id="@+id/rootLayoutMain">
 
     <ImageView
         android:layout_width="150dp"
@@ -23,7 +24,8 @@
         android:layout_alignLeft="@+id/imageButtonPlay"
         android:layout_alignStart="@+id/imageButtonPlay"
         android:layout_marginTop="20dp"
-        android:background="@drawable/istore"/>
+        android:background="@drawable/istore"
+        android:onClick="ShowGameshopPopUp"/>
 
     <ImageView
         android:layout_width="50dp"
@@ -32,7 +34,8 @@
         android:layout_alignTop="@+id/button"
         android:layout_alignRight="@+id/imageButtonPlay"
         android:layout_alignEnd="@+id/imageButtonPlay"
-        android:background="@drawable/infa"/>
+        android:background="@drawable/infa"
+        android:onClick="ShowAboutPopUp"/>
 
 
 </RelativeLayout>
