--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -69,10 +69,57 @@
                          the ZoomActivity class.
             -->
             <AbsoluteLayout android:layout_width="330dp" android:layout_height="330dp" android:layout_centerHorizontal="true">
-                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff0512ff" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
-                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="170dp" android:background="#ff0512ff" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ffff23ce" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff10ff12" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_x="0dp"
+                    android:layout_y="0dp"
+                    android:background="#ff0512ff"
+                    android:layout_marginBottom="5dp"
+                    android:id="@+id/imageView1"
+                    android:layout_marginRight="1dp"
+                    android:scaleType="centerCrop"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:padding="3dp"/>
+                <ImageButton android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_x="170dp"
+                    android:background="#ff0512ff"
+                    android:adjustViewBounds="false"
+                    android:baselineAlignBottom="false"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="5dp"
+                    android:id="@+id/imageView2"
+                    android:layout_marginRight="1dp"
+                    android:scaleType="centerCrop"
+                    android:padding="3dp"/>
+                <ImageButton android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_x="0dp"
+                    android:layout_y="170dp"
+                    android:background="#ffff23ce"
+                    android:clickable="false"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:id="@+id/imageView3"
+                    android:layout_marginRight="1dp"
+                    android:scaleType="centerCrop"
+                    android:padding="3dp"/>
+                <ImageButton android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_x="170dp"
+                    android:layout_y="170dp"
+                    android:background="#ff10ff12"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:id="@+id/imageView4"
+                    android:layout_marginRight="1dp"
+                    android:scaleType="centerCrop"
+                    android:padding="3dp"/>
                 <ImageView android:id="@+id/expanded_image" android:layout_width="wrap_content" android:layout_height="330dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="3dp" android:background="#ff10ff12"/>
 
             </AbsoluteLayout>
