--- a/app/src/main/res/xml/global_tracker.xml
+++ b/app/src/main/res/xml/global_tracker.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="TypographyDashes">
-    <integer name="ga_sessionTimeout">300</integer>
+    <!-- the Local LogLevel for Analytics -->
+    <string name="ga_logLevel">verbose</string>
 
-    <!-- Enable automatic Activity measurement -->
-    <bool name="ga_autoActivityTracking">true</bool>
+    <!-- how often the dispatcher should fire -->
+    <integer name="ga_dispatchPeriod">30</integer>
 
-    <!-- The screen names that will appear in reports -->
-    <screenName name="com.google.android.gms.analytics.samples.mobileplayground.ScreenviewFragment">
-        AnalyticsSampleApp ScreenViewSampleScreen
+    <!-- Treat events as test events and don't send to google -->
+    <bool name="ga_dryRun">false</bool>
+    <!--The screen names that will appear in reports &ndash;&gt;-->
+    <screenName name="com.dailyappslab.fino.MainActivity">
+        MainActivity
     </screenName>
-    <screenName name="com.google.android.gms.analytics.samples.mobileplayground.EcommerceFragment">
-        AnalyticsSampleApp EcommerceSampleScreen
+    <screenName name="com.dailyappslab.fino.GameActivity">
+        GameActivity
     </screenName>
-    <!--  The following value should be replaced with correct property id. -->
-    <string name="ga_trackingId">UA-XXXXXXX-Y</string>
 </resources>
