--- a/app/src/main/res/layout-small/gameshop.xml
+++ b/app/src/main/res/layout-small/gameshop.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#00F8F8F8"
+    android:orientation="vertical" android:layout_width="250dp"
+    android:layout_height="345dp"
+    android:theme="@style/Theme.AppCompat.Dialog"
     >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#000000"
-        android:alpha="0.5"></RelativeLayout>
+
 
     <RelativeLayout
         android:layout_width="250dp"
